--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "http://localhost/"
+baseURL = "https://kishinshuichiro.github.io/"
 languageCode = "zh-cn"
 title = "Meditationes Sansepulcristarum"
 theme = "PaperMod"
