--- a/hugo.toml
+++ b/hugo.toml
@@ -6,6 +6,7 @@ theme = "PaperMod"
 [params]
   defaultTheme = "dark"
   ShowReadingTime = false
+  ShowFirstPost = false 
 
 [params.cover]
   hiddenInList = false
