--- a/hugo.toml
+++ b/hugo.toml
@@ -9,6 +9,11 @@ theme = "PaperMod"
   ShowFirstPost = false
   mainSections = ["posts"]
 
+[params.homeInfoParams]
+  Title = "Welcome"
+  Content = "测试一下。\n\n*Liebe dein Symptom wie dich selbst.*"
+
+
 [params.cover]
   hiddenInList = false
   hiddenInSingle = false
